--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">MyWardrobe</string>
     <string name="slogan">You\'re beautiful anyway</string>
+    <string name="slogan2">Your digital wardrobe</string>
     <string name="reg">Registration</string>
     <string name="sign_up">Sign up</string>
     <string name="sign_in">Sign in</string>
@@ -43,10 +44,13 @@
     <string name="next">Next</string>
     <string name="choose_gender">Choose your gender!</string>
     <string name="city">City name</string>
+    <string name="time">Time</string>
     <string name="condition">Condition</string>
-    <string name="temperature">11</string>
+    <string name="temperature">17</string>
+    <string name="weather_forecast">Weather forecast</string>
     <string name="item_name">Item Name</string>
     <string name="suggested_clothes">Suggested clothes</string>
+    <string name="fashion">Men\'s fashion news</string>
     <string name="home">Home</string>
     <string name="search">Search</string>
     <string name="closet">Closet</string>
@@ -64,6 +68,7 @@
     <string name="accessories">Accessories</string>
     <string name="looks">Looks</string>
     <string name="camera">Camera</string>
+    <string name="add_clothe">Add cloth</string>
     <string name="gallery">Gallery</string>
     <string name="show_all">Show all</string>
     <string name="filters">Filters</string>
@@ -103,11 +108,20 @@
     <string name="step_one">Step 1: Add look photo, it`s title and description.</string>
     <string name="step_two">Step 2: Add look items.</string>
     <string name="add_image">Add image!</string>
+    <string name="add_look_item">Add new item to your look:</string>
+    <string name="internetConnection">Check internet connection!</string>
+    <string name="try_again">Try again</string>
+    <string name="send">Send</string>
+    <string name="enter_old">Enter old password</string>
+    <string name="enter_new">Enter new password</string>
+    <string name="repeat_new">Repeat new password</string>
+    <string name="change">Change</string>
 
     <string-array name="types">
         <item>Shirt</item>
         <item>T-shirt</item>
         <item>Sweater</item>
+        <item>Hoodie</item>
         <item>Jacket</item>
         <item>Jeans</item>
         <item>Sneakers</item>
